[JBEE-225] Fix Specification-Version manifest attribute value - And use the generated manifest for source and javadocs

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -194,6 +194,12 @@
                     <supportedProjectTypes>
                         <supportedProjectType>jar</supportedProjectType>
                     </supportedProjectTypes>
+                    <archive>
+                        <manifest>
+                            <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
+                            <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
+                        </manifest>
+                    </archive>
                     <instructions>
                         <Bundle-Description>Jakarta Expression Language ${spec.version}</Bundle-Description>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
@@ -238,6 +244,9 @@
                 <version>3.2.1</version>
                 <configuration>
                     <includePom>true</includePom>
+                    <archive>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
                 </configuration>
                 <executions>
                     <execution>
@@ -282,6 +291,9 @@ Use is subject to <a href="{@docRoot}/doc-files/EFSL.html" target="_top">license
                                     </packages>
                                 </group>
                             </groups>
+                            <archive>
+                                <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                            </archive>
                         </configuration>
                     </execution>
                 </executions>
