add apache license to pom.xml + license file

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -65,6 +65,11 @@
             <url>https://www.gnu.org/software/classpath/license.html</url>
             <distribution>repo</distribution>
         </license>
+      <license>
+            <name>Apache 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
     </licenses>
     
     <scm>
