--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,27 @@
     <name>Jakarta Expression Language</name>
     <description>Jakarta Expression Language</description>
     <url>https://projects.eclipse.org/projects/ee4j.el</url>
-
     <modules>
         <module>api</module>
     </modules>
+	
+    <licenses>
+        <license>
+            <name>EPL 2.0</name>
+            <url>http://www.eclipse.org/legal/epl-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+        <license>
+            <name>GPL2 w/ CPE</name>
+            <url>https://www.gnu.org/software/classpath/license.html</url>
+            <distribution>repo</distribution>
+        </license>
+        <license>
+            <name>Apache 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <build>
         <plugins>
