--- a/api/pom.xml
+++ b/api/pom.xml
@@ -22,15 +22,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.eclipse.ee4j</groupId>
-        <artifactId>project</artifactId>
-        <version>1.0.6</version>
-        <relativePath/>
+        <groupId>org.jboss.spec.jakarta.el</groupId>
+        <artifactId>jboss-el-api_5.0_spec-parent</artifactId>
+        <version>4.0.0.Beta1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>jakarta.el</groupId>
-    <artifactId>jakarta.el-api</artifactId>
-    <version>5.0.0</version>
+    <groupId>org.jboss.spec.jakarta.el</groupId>
+    <artifactId>jboss-el-api_5.0_spec</artifactId>
     <packaging>jar</packaging>
 
     <name>Jakarta Expression Language API</name>
