--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.eclipse.ee4j</groupId>
-        <artifactId>project</artifactId>
-        <version>1.0.6</version>
+        <groupId>org.jboss</groupId>
+        <artifactId>jboss-parent</artifactId>
+        <version>39</version>
     </parent>
 
-    <groupId>jakarta.el</groupId>
-    <artifactId>el-parent</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <groupId>org.jboss.spec.jakarta.el</groupId>
+    <artifactId>jboss-el-api_5.0_spec-parent</artifactId>
     <packaging>pom</packaging>
+    <version>4.0.0.Beta1-SNAPSHOT</version>
 
     <name>Jakarta Expression Language</name>
     <description>Jakarta Expression Language</description>
