--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>org.jboss.spec.jakarta.el</groupId>
     <artifactId>jboss-el-api_5.0_spec-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.0.Alpha1</version>
+    <version>4.0.0.Final-SNAPSHOT</version>
 
     <name>Jakarta Expression Language</name>
     <description>Jakarta Expression Language</description>
