Next is 4.0.0.Final

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.jboss.spec.jakarta.el</groupId>
         <artifactId>jboss-el-api_5.0_spec-parent</artifactId>
-        <version>4.0.0.CR1</version>
+        <version>4.0.0.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
